リンクの上に要素が被って上に要素が被っている問題要素が被っている問題への対応

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1376,8 +1376,8 @@ body {
   /* background-attachment: fixed; */
 }
 
-.slider-2 .slick-list{
-  height: 1000px; 
+.slider-2 .draggable{
+  height: 1000px !important; 
 }
 
 
