ロゴの位置調整;

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5422,7 +5422,7 @@ textarea {
   }
 
   #hamburger{
-    top: 30px;
+    top: 4.5vw;
 
   }
 
@@ -5430,8 +5430,10 @@ textarea {
     height: 2px !important; 
   }
   .brandLogo{
-    width:  35vw;
-    left: 34%;
+    width:  36vw;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 4vw;
   }
 }
 
