ロゴの位置調整;

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5422,8 +5422,9 @@ textarea {
   }
 
   #hamburger{
-    top: 4.5vw;
-
+    top: 25px;
+    width: 20px;
+    height: 15px;
   }
 
   #hamburger__bar{
