ロゴの位置調整;

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5421,15 +5421,19 @@ textarea {
     font-size: 13px;
   }
 
+
+  #hamburger__bar{
+    height: 2px !important; 
+  }
+}
+
+@media(max-width: 850px){
   #hamburger{
     top: 25px;
     width: 20px;
     height: 15px;
   }
 
-  #hamburger__bar{
-    height: 2px !important; 
-  }
   .brandLogo{
     width:  36vw;
     left: 50%;
