--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5429,6 +5429,21 @@ textarea {
 
 @media(max-width: 850px){
   #hamburger{
+    top: 35px;
+    width: 20px;
+    height: 15px;
+  }
+
+  .brandLogo{
+    width:  36vw;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40px;
+  }
+}
+
+@media(max-width: 650px){
+  #hamburger{
     top: 25px;
     width: 20px;
     height: 15px;
@@ -5441,6 +5456,7 @@ textarea {
     top: 15px;
   }
 }
+
 
 @media (max-width: 550px){
 
