オープニング位置微調整

--- a/assets/opening-style.css.liquid
+++ b/assets/opening-style.css.liquid
@@ -150,6 +150,7 @@ li{
   display: block;
   width: fit-content;
   margin: 0 auto;
+  top:-20px;
 }
 .top-bg__txt-opening .js-hover-animation:before,
 .top-bg__txt-opening .js-hover-animation:after{
